src/tools/dmlc/test/1.2/errors/T_EASSIGN_34.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device eassign;

method init {
    /// ERROR EASSIGN
    $dev = $dev;
}
